--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore in Data
 data/.DS_Store
-data/MSc5_research_project/data/.ipynb_checkpoints
+data/.ipynb_checkpoints
 
 
 # Ignore in main directory
