--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -37,4 +37,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3.6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./lecture/_build/html
+        publish_dir: ./content/_build/html
