--- a/content/_config.yml
+++ b/content/_config.yml
@@ -42,7 +42,7 @@ launch_buttons:
 
 repository:
   url                       : https://github.com/M-earnest/course_template_diler  # The URL to your book's repository
-  path_to_book              : "lecture"  # A path to your book's folder, relative to the repository root.
+  path_to_book              : "content"  # A path to your book's folder, relative to the repository root.
   branch                    : master  # Which branch of the repository should be used when creating links
 
 #######################################################################################
