--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -1,20 +1,9 @@
 root: general_information/index
 format: jb-book
 chapters:
-- file: general_information/overview
-- file: general_information/procedure
-- file: general_information/outline
-- file: general_information/setup
+- file: general_information/TheoreticalBackground.md
+- file: general_information/DataProjectManagement.md
+- file: data/Data_exploration.ipynb
+- file: data/Data_analysis.ipynb
 - file: introduction/intro
-  sections:
-  - file: introduction/static_content
-  - file: introduction/interactive_notebook
-- file: content/intro_content
-  sections:
-  - file: content/static_content.md
-  - file: content/interactive_notebook.md
-  - file: content/creating_content_example.ipynb
-- file: general_information/results_communication
-- file: general_information/symposium
-- file: general_information/CoC
-- file: general_information/dei
+
