--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -1,4 +1,4 @@
-root: general_information/index
+root: content/index
 format: jb-book
 chapters:
 - file: general_information/TheoreticalBackground.md
