--- a/content/_config.yml
+++ b/content/_config.yml
@@ -5,10 +5,10 @@
 
 #######################################################################################
 # Book settings
-title                       : "Course Template for ressources in higher education"  # The title of the book. Will be placed in the left navbar.
-author                      : Michael Ernst, Felix Körber based on the Gorella template by Peer Herholz, José C. García Alanis, Christoph Vogelbacher  # The author of the book
-copyright                   : "2022"  # Copyright year to be placed in the footer
-logo                        : "static/logo.png"  # A path to the book logo
+title                       : "Predicting psychotic disorder with machine learning"  # The title of the book. Will be placed in the left navbar.
+author                      : Mevlüt Yaglu based on the course template by Felix Koerber and Michael Ernst  # The author of the book
+copyright                   : "2023"  # Copyright year to be placed in the footer
+logo                        : "static/brain.png"  # A path to the book logo
 exclude_patterns            : []  # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
 
 #######################################################################################
@@ -41,7 +41,7 @@ launch_buttons:
   thebe                     : false  # Add a thebe button to pages (requires the repository to run on Binder)
 
 repository:
-  url                       : https://github.com/M-earnest/course_template_diler  # The URL to your book's repository
+  url                       : https://github.com/mello-y/MSc5_research_project  # The URL to your book's repository
   path_to_book              : "content"  # A path to your book's folder, relative to the repository root.
   branch                    : master  # Which branch of the repository should be used when creating links
 
