--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -8,12 +8,12 @@ chapters:
   sections: 
   - file: code/Data_analysis.ipynb
   - file: code/SVM.ipynb
-- file: general_information/open_lab_notebook
+- file: content/open_lab_notebook
   sections:
   - file: open_lab_notebook/November.md
   - file: open_lab_notebook/December.md
   - file: open_lab_notebook/January.md
   - file: open_lab_notebook/February.md
   - file: open_lab_notebook/March.md
-- file: Discussion.md
-- file: References.md
+- file: general_information/Discussion.md
+- file: general_information/References.md
