--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -8,7 +8,7 @@ chapters:
   sections: 
   - file: code/Data_analysis.ipynb
   - file: code/SVM.ipynb
- file: general_information/Discussion.md
+- file: general_information/Discussion.md
 - file: general_information/open_labnotebook.md
   sections:
   - file: open_lab_notebook/November.md
